--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/chat.js": "/js/chat.js",
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/js/homepage.js": "/js/homepage.js"
+    "/js/homepage.js": "/js/homepage.js",
+    "/js/chat.js": "/js/chat.js"
 }
