--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   },
   "dependencies": {
     "laravel-echo": "^1.4.0",
-    "pusher-js": "^4.2.2"
+    "npm": "^6.4.0",
+    "pusher-js": "^4.2.2",
+    "update": "^0.7.4"
   },
   "name": "chat",
   "description": "<p align=\"center\"><img src=\"https://laravel.com/assets/img/components/logo-laravel.svg\"></p>",
