--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/js/homepage.js": "/js/homepage.js"
+    "/js/listen.js": "/js/listen.js"
 }
